[gd_scene load_steps=12 format=3 uid="uid://chcp24toqisaw"]

[ext_resource type="Theme" uid="uid://bhum72inirq1q" path="res://Themes/Generic_UI.tres" id="1_1rf3l"]
[ext_resource type="Script" path="res://_Scripts/PanelController.gd" id="2_v4hmf"]
[ext_resource type="LabelSettings" uid="uid://bd2jj8jlh3vp2" path="res://Themes/Geolog√≠a/LabelSetting_Generic.tres" id="3_dyr2v"]
[ext_resource type="Texture2D" uid="uid://dyc6lr4k2lmfp" path="res://Sprites/UI/BotonAceptarGenerico.png" id="4_7mujx"]
[ext_resource type="Texture2D" uid="uid://jii7xt8hwy2n" path="res://Sprites/UI/bOTON ok.png" id="4_nfqrg"]

[sub_resource type="Animation" id="Animation_jxxgf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_82sr6"]
resource_name = "enter_panel"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, -0.5, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q21f0"]
_data = {
"RESET": SubResource("Animation_jxxgf"),
"enter_panel": SubResource("Animation_82sr6")
}

[sub_resource type="Animation" id="Animation_phw3d"]
resource_name = "appear"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-45, -45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(90, 90)]
}

[sub_resource type="Animation" id="Animation_6ejw5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-45, -45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, 90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvjan"]
_data = {
"RESET": SubResource("Animation_6ejw5"),
"appear": SubResource("Animation_phw3d")
}

[node name="Panel" type="Panel"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -326.0
offset_top = 18.0
offset_right = 326.0
offset_bottom = 316.0
grow_horizontal = 2
pivot_offset = Vector2(326, 149)
theme = ExtResource("1_1rf3l")
script = ExtResource("2_v4hmf")
TimeToAppearBTN = null
BotonDerecho = true

[node name="label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_top = 56.0
offset_right = -67.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("3_dyr2v")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
visible_characters_behavior = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q21f0")
}

[node name="BtnDerAnchor" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.839
anchor_top = 1.0
anchor_right = 0.839
anchor_bottom = 1.0
offset_left = -0.0280151
offset_top = -3.0
offset_right = -0.0280151
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnDer" type="Button" parent="BtnDerAnchor"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(45, 45)

[node name="TextureRect" type="TextureRect" parent="BtnDerAnchor/btnDer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nfqrg")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="BtnDerAnchor/btnDer"]
libraries = {
"": SubResource("AnimationLibrary_kvjan")
}

[node name="btnIzqAnchor" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.144
anchor_top = 1.0
anchor_right = 0.144
anchor_bottom = 1.0
offset_left = 0.111992
offset_top = -2.0
offset_right = 0.111992
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnIzq" type="Button" parent="btnIzqAnchor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="btnIzqAnchor/btnIzq"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="btnIzqAnchor/btnIzq"]
libraries = {
"": SubResource("AnimationLibrary_kvjan")
}

[node name="btnCentralAnchor" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 1.003
anchor_right = 0.5
anchor_bottom = 1.003
offset_top = 0.105988
offset_bottom = 0.105988
grow_horizontal = 2
grow_vertical = 2

[node name="btnCentral" type="Button" parent="btnCentralAnchor"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="btnCentralAnchor/btnCentral"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_7mujx")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="btnCentralAnchor/btnCentral"]
libraries = {
"": SubResource("AnimationLibrary_kvjan")
}
